Fix css cut off

--- a/frontend/src/components/Playlists/PlaylistShow/PlaylistSongListItem/PlaylistSongListItem.css
+++ b/frontend/src/components/Playlists/PlaylistShow/PlaylistSongListItem/PlaylistSongListItem.css
@@ -54,7 +54,7 @@
   margin-right: auto;
   color: gray;
   font-size: .8rem;
-  width: 100px;
+  width: 130px;
   /* border: 1px solid rgb(97, 53, 53); */
 }
 
